[gd_scene load_steps=7 format=3 uid="uid://bfv22rsmcqby0"]

[ext_resource type="Script" uid="uid://bm5ikfsvpglaq" path="res://Scenes/main_menu.gd" id="1_wugcc"]
[ext_resource type="Texture2D" uid="uid://co05qipl8sxwm" path="res://Assets/Image/Menu_scene.png" id="2_b7rmo"]
[ext_resource type="AudioStream" uid="uid://c0lv4uyu1vfao" path="res://Assets/Music and sound/Menu_Music.mp3" id="2_rmbjf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.35, 0.25, 0.18, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.25, 0.18, 0.12, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.45, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.08, 0.06, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.4, 0.3, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wugcc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 321.25)
scale = Vector2(0.748698, 0.632324)
texture = ExtResource("2_b7rmo")

[node name="Background" type="ColorRect" parent="."]
visible = false
clip_contents = true
layout_direction = 1
layout_mode = 0
color = Color(0.08, 0.08, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TitleLabel" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.1, 0.05, 0.8)
theme_override_colors/font_outline_color = Color(0.15, 0.1, 0.05, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 56
text = "THE ABANDONED KNIGHT
(Ver 0.3)"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="CenterContainer/MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚öî Start Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚öô Options"

[node name="ExitButton" type="Button" parent="CenterContainer/MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚úñ Exit"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -350.0
offset_right = 300.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.1, 0.05, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "‚öô OPTIONS ‚öô"
horizontal_alignment = 1

[node name="VolumeControl" type="VBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "üîä Volume"

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 10.0

[node name="VolumeValue" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "10"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ControlsLabel" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "‚å® CONTROLS"
horizontal_alignment = 1

[node name="ControlsHint" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Click a button to rebind. Press ESC to cancel."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="ControlsContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚Üê Back"

[node name="ModeSelectionPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="ModeSelectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="ModeSelectionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="ModeSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.1, 0.05, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "SELECT MODE"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="ModeSelectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="StoryButton" type="Button" parent="ModeSelectionPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "üìñ Story Mode"

[node name="StoryDesc" type="Label" parent="ModeSelectionPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Embark on an epic journey through the kingdom"
horizontal_alignment = 1

[node name="InfiniteButton" type="Button" parent="ModeSelectionPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚àû Infinite Mode"

[node name="InfiniteDesc" type="Label" parent="ModeSelectionPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Endless waves of enemies. How long can you survive?"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="ModeSelectionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚Üê Back"

[node name="StoryModePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="StoryModePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="StoryModePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="StoryModePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.1, 0.05, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
text = "üìñ STORY MODE"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="StoryModePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="StoryModePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚ú® New Game"

[node name="NewGameDesc" type="Label" parent="StoryModePanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 13
text = "Start a fresh adventure from the beginning"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="StoryModePanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.5, 0.4, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚ñ∂ Resume Game"

[node name="ResumeDesc" type="Label" parent="StoryModePanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 13
text = "Continue your saved progress"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="StoryModePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚Üê Back"

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rmbjf")
volume_db = -10.0
autoplay = true
